fix body horizontal scroll, fix width of inputs in smaller width displays

--- a/tax-tracker/src/containers/IncomeTax/style.module.scss
+++ b/tax-tracker/src/containers/IncomeTax/style.module.scss
@@ -15,6 +15,7 @@
     .form {
       margin: 0 auto;
       order: 1;
+      width: 100%;
     }
     .description {
       order: 3;
