--- a/tax-tracker/src/containers/Mortgage/MortgageForm/style.module.scss
+++ b/tax-tracker/src/containers/Mortgage/MortgageForm/style.module.scss
@@ -19,7 +19,7 @@ form {
     }
   }
   .btn {
-    width: 343px;
+    max-width: 343px;
     height: 44px;
   }
 }
