--- a/tax-tracker/src/index.css
+++ b/tax-tracker/src/index.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 b {
   font-weight: bold;
@@ -14,7 +15,7 @@ h1 {
 }
 
 .footer:after {
-  content: "This is my added text";
+  content: 'This is my added text';
   display: block;
   margin-bottom: 10px;
   color: #cc0000;
